tests/negative/gold/clashing_class_test.gold
tests/negative/clashing_class_test.toit:6:7: error: Redefinition of 'A'
class A:
      ^
tests/negative/clashing_class_test.toit:3:7: note: First definition of 'A'
class A:
      ^
Compilation failed.
